Functional multiplayer over Internet
